--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,5 +5,5 @@ services:
       context: .
     environment:
       ATLAS_CONFIG: app.config
-    expose:
-      - "8000"
+    ports:
+      - "8000:8000"
